--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -37,10 +37,8 @@ function buildToc(headings: Heading[]): Heading[] {
 }
 ---
 
-<details
-  open
-  class="group col-start-2 mx-4 block rounded-xl border p-4 xl:hidden"
->
+<!--
+<details open class="group col-start-2 mx-4 block rounded-xl p-4 xl:hidden">
   <summary
     class="font-dm flex cursor-pointer items-center justify-between text-sm font-semibold"
   >
@@ -62,7 +60,7 @@ function buildToc(headings: Heading[]): Heading[] {
     </nav>
   </ScrollArea>
 </details>
-
+-->
 <nav
   class="sticky top-[5.5rem] col-start-1 hidden h-[calc(100vh-5.5rem)] text-xs leading-4 xl:block"
 >
