--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,11 +11,11 @@ const projects = await getCollection('projects')
 
 <Layout title="About" description={SITE.DESCRIPTION}>
   <Container class="flex flex-col gap-y-6">
-    <Breadcrumbs items={[{ label: 'About', icon: 'lucide:info' }]} />
+    <Breadcrumbs items={[{ label: 'About', icon: '' }]} />
 
     <section>
       <div class="min-w-full">
-        <h1 class="mb-4 text-3xl font-bold">About</h1>
+        <h1 class="font-sequel mb-4 text-3xl font-bold">About</h1>
         <p class="font-locus mb-8 text-xl leading-normal dark:prose-invert">
           안녕하세요. 저는 이찬행 이라고 합니다. 컴퓨터 공학과를 중퇴 후,
           부트캠프 과정을 수료, 리액트 프론트엔드 개발을 시작하였으며 이후
