--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -29,8 +29,8 @@ const posts = page.data
   <Container class="flex grow flex-col gap-y-6">
     <Breadcrumbs
       items={[
-        { label: 'Blog', href: '/blog', icon: 'lucide:archive' },
-        { label: `Page ${page.currentPage}`, icon: 'lucide:folder-open' },
+        { label: 'Blog', href: '/blog', icon: '' },
+        { label: `Page ${page.currentPage}`, icon: '' },
       ]}
     />
 
