--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -60,8 +60,8 @@ const { Content, headings } = await post.render()
   >
     <Breadcrumbs
       items={[
-        { href: '/blog', label: 'Blog', icon: 'lucide:archive' },
-        { label: post.data.title, icon: 'lucide:file-text' },
+        { href: '/blog', label: 'Blog', icon: '' },
+        { label: post.data.title, icon: '' },
       ]}
       class="col-start-2"
     />
