--- a/src/components/PostNavigation.astro
+++ b/src/components/PostNavigation.astro
@@ -12,7 +12,7 @@ const { prevPost, nextPost } = Astro.props
     href={nextPost ? `/blog/${nextPost.slug}` : '#'}
     class={cn(
       buttonVariants({ variant: 'outline' }),
-      'border-0 italic rounded-none group flex items-center justify-start w-full sm:w-1/2 h-fit',
+      'border-0 rounded-none group flex items-center justify-start w-full sm:w-1/2 h-fit',
       !nextPost && 'pointer-events-none opacity-50 cursor-not-allowed',
     )}
     aria-disabled={!nextPost}
@@ -26,7 +26,7 @@ const { prevPost, nextPost } = Astro.props
     <div class="flex flex-col items-start overflow-hidden">
       <span class="text-left text-xs text-muted-foreground">Next Post</span>
       <span class="w-full truncate text-left text-sm"
-        >{nextPost?.data.title || 'Latest post!'}</span
+        >{nextPost?.data.title}</span
       >
     </div>
   </Link>
@@ -34,7 +34,7 @@ const { prevPost, nextPost } = Astro.props
     href={prevPost ? `/blog/${prevPost.slug}` : '#'}
     class={cn(
       buttonVariants({ variant: 'outline' }),
-      'border-0 italic rounded-none group flex items-center justify-end w-full sm:w-1/2 h-fit',
+      'border-0 rounded-none group flex items-center justify-end w-full sm:w-1/2 h-fit',
       !prevPost && 'pointer-events-none opacity-50 cursor-not-allowed',
     )}
     aria-disabled={!prevPost}
