--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -18,7 +18,7 @@ const readTime = readingTime(entry.body)
 ---
 
 <div
-  class="not-prose rounded-md py-3 transition-colors duration-300 ease-in-out"
+  class="not-prose  rounded bg-secondary/10 hover:bg-secondary/50 px-4 py-4 transition-colors duration-300 ease-in-out"
 >
   <Link
     href={`/${entry.collection}/${entry.slug}`}
@@ -38,10 +38,10 @@ const readTime = readingTime(entry.body)
       )
     }
     <div class="flex-grow">
-      <h3 class="mb-1 text-lg font-semibold font-sequel">
+      <h3 class="mb-1 text-lg font-semibold">
         {entry.data.title}
       </h3>
-      <p class="mb-2 font-locus text-sm text-muted-foreground">
+      <p class="mb-6 font-nanum text-sm text-muted-foreground">
         {entry.data.description}
       </p>
       <div
