--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import { Image } from 'astro:assets'
         <!-- Phaser 게임 번들 -->
       </head>
       <body>
-        <div class="font-locus pt-2">Henry's Playground</div>
+        <div class="font-google pt-2 text-sm">Henry's Playground</div>
 
         <div class="pb-6"></div>
 
