--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -143,6 +143,9 @@ canvas {
   letter-spacing: 2px;
 }
 
+.font-love { 
+  font-family: Love Ya Like A Sister, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+}
 
 .font-noto {
   font-family: DM Mono, "Noto Sans KR", sans-serif;
@@ -437,7 +440,7 @@ article {
     @apply prose-a:!text-primary prose-a:!decoration-primary/50 prose-a:!underline-offset-[3px] prose-a:transition-colors hover:prose-a:!decoration-inherit;
     @apply prose-blockquote:!not-italic prose-blockquote:!text-muted-foreground;
     @apply prose-pre:!px-0;
-    @apply prose-img:mx-auto prose-img:rounded-xl prose-img:border;
+    @apply prose-img:mx-auto prose-img:rounded-xl;
     @apply prose-table:mx-auto prose-table:block prose-table:max-w-fit prose-table:overflow-x-auto prose-td:break-words;
     @apply sm:prose-table:mx-0 sm:prose-table:table sm:prose-table:max-w-none;
 
