--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -18,7 +18,7 @@ const readTime = readingTime(entry.body)
 ---
 
 <div
-  class="not-prose  rounded bg-secondary/10 hover:bg-secondary/50 px-4 py-4 transition-colors duration-300 ease-in-out"
+  class="not-prose  rounded  py-4 transition-colors duration-300 ease-in-out"
 >
   <Link
     href={`/${entry.collection}/${entry.slug}`}
