--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -120,7 +120,7 @@ const { Content, headings } = await post.render()
     {headings.length > 0 && <TableOfContents headings={headings} />}
 
     <article
-      class="font-nanum traking-wider prose prose-sm prose-neutral col-start-2 max-w-none dark:prose-invert"
+      class="font-nanum traking-wider prose prose-sm prose-neutral col-start-2 max-w-none text-black dark:prose-invert"
     >
       <Content />
     </article>
