--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -119,7 +119,7 @@ canvas {
 
 /* font */
 .font-guel { 
-  font-family: DM Mono, "Ownglyph guelmi";
+  font-family: Love Ya Like A Sister, "Ownglyph guelmi";
   font-size: 13px;
 }
 
