--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -432,6 +432,7 @@ article {
   h1, h2, h3, h4, h5 {
     @apply font-heading;
     font-weight: 900 !important;
+    color: black;
   }
   
   article {
