--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -18,7 +18,7 @@ const { project } = Astro.props
         <Link href={project.data.link} class="block" external
           >{project.data.name}</Link
         >
-        <div class="font-google text-sm text-slate-600">
+        <div class="font-dm text-xs text-slate-600">
           {project.data.date}
         </div>
         <div class="font-locus leading-tight text-slate-500">
