--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -29,7 +29,7 @@ const projects = await getCollection('projects')
           * 2020.02-2020.06 : IPS Papaya(주)
           <br />
 
-          <!-- <div class="font-google">Tech Stack</div> -->
+          <!-- <div class="font-dm">Tech Stack</div> -->
           * Swift · SwiftUI · Typescript · Node.js · Kotlin · Python
         </p>
       </div>
