--- a/src/components/PostNavigation.astro
+++ b/src/components/PostNavigation.astro
@@ -7,7 +7,7 @@ import { Icon } from 'astro-icon/components'
 const { prevPost, nextPost } = Astro.props
 ---
 
-<div class="font-google col-start-2 flex flex-col gap-4 !px-0 sm:flex-row">
+<div class="font-dm col-start-2 flex flex-col gap-4 !px-0 sm:flex-row">
   <Link
     href={nextPost ? `/blog/${nextPost.slug}` : '#'}
     class={cn(
@@ -24,7 +24,7 @@ const { prevPost, nextPost } = Astro.props
       />
     </div>
     <div class="flex flex-col items-start overflow-hidden">
-      <span class="text-left text-xs text-muted-foreground">Next Post</span>
+      <span class="text-left text-xs text-muted-foreground"></span>
       <span class="w-full truncate text-left text-sm"
         >{nextPost?.data.title}</span
       >
@@ -40,8 +40,7 @@ const { prevPost, nextPost } = Astro.props
     aria-disabled={!prevPost}
   >
     <div class="flex flex-col items-end overflow-hidden">
-      <span class="text-right text-xs text-muted-foreground">Previous Post</span
-      >
+      <span class="text-right text-xs text-muted-foreground"></span>
       <span class="w-full truncate text-right text-sm"
         >{prevPost?.data.title}</span
       >
