--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -14,8 +14,8 @@ const { project } = Astro.props
     class="mb-1 flex flex-col items-start before:relative before:left-2 before:h-full before:-translate-x-1/2 before:translate-y-3 before:self-start after:absolute after:left-2 after:mt-[0.25rem] after:box-content after:h-3 after:w-3 after:-translate-x-1/2 after:translate-y-1.5 after:rounded-full after:bg-orange-300 sm:flex-row sm:before:left-0 sm:before:mr-[0.5rem] sm:after:left-0 sm:after:ml-[0.5rem]"
   >
     <div>
-      <div class="font-guel mb-1 text-2xl font-medium text-indigo-500 sm:mb-0">
-        <Link href={project.data.link} class="block" external
+      <div class="font-locus mb-1 text-2xl font-medium text-indigo-500 sm:mb-0">
+        <Link href={project.data.link} class="block no-underline" external
           >{project.data.name}</Link
         >
         <div class="font-dm text-xs text-slate-600">
