--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -29,8 +29,8 @@ const posts = page.data
   <Container class="mb-8 flex grow flex-col gap-y-6">
     <Breadcrumbs
       items={[
-        { label: 'archive', href: '/blog', icon: '' },
-        { label: `page ${page.currentPage}`, icon: '' },
+        { label: 'posts', href: '/blog', icon: '' },
+        { label: `${page.currentPage}`, icon: '' },
       ]}
     />
     <div class="mb-4"></div>
