--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -60,7 +60,7 @@ const { Content, headings } = await post.render()
   >
     <Breadcrumbs
       items={[
-        { href: '/blog', label: 'Blog', icon: '' },
+        { href: '/blog', label: 'Posts', icon: '' },
         { label: post.data.title, icon: '' },
       ]}
       class="col-start-2"
