--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -38,7 +38,7 @@ const readTime = readingTime(entry.body)
       )
     }
     <div class="flex-grow">
-      <h3 class="mb-1 text-lg font-semibold">
+      <h3 class="mb-1 text-lg font-bantayog uppercase">
         {entry.data.title}
       </h3>
       <p class="mb-2 font-nanum text-sm text-muted-foreground">
