--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import Container from '@/components/Container.astro'
 ---
 
-<footer class="py-4">
+<footer class="mx-auto max-w-[568px] px-4 py-4">
   <Container>
     <div
       class="font-dm flex flex-col items-center justify-center gap-y-2 font-light sm:flex-row sm:justify-between"
