--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,6 @@
 ---
 import Footer from '@/components/Footer.astro'
 import Head from '@/components/Head.astro'
-import Header from '@/components/Header.astro'
 import { SITE } from '@/consts'
 
 type Props = {
@@ -24,9 +23,8 @@ const { title, description, image } = Astro.props
   </head>
   <body>
     <div
-      class="box-border flex h-fit min-h-screen flex-col gap-y-6 font-sans antialiased"
+      class="my-16 box-border flex h-fit min-h-screen flex-col gap-y-6 font-sans antialiased"
     >
-      <Header />
       <main class="flex-grow">
         <slot />
       </main>
