--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -38,10 +38,10 @@ const readTime = readingTime(entry.body)
       )
     }
     <div class="flex-grow">
-      <h3 class="mb-1 text-lg font-bantayog uppercase">
+      <h3 class="mb-0 text-lg font-love uppercase">
         {entry.data.title}
       </h3>
-      <p class="mb-2 font-nanum text-sm text-muted-foreground">
+      <p class="mb-3 font-nanum text-sm text-muted-foreground">
         {entry.data.description}
       </p>
       <div
