--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -27,7 +27,8 @@ const { items, class: className } = Astro.props
   <BreadcrumbList>
     <BreadcrumbItem>
       <BreadcrumbLink href="/">
-        <Icon name="lucide:home" class="size-4" />
+        <!-- <Icon name="lucide:home" class="size-4" /> -->
+        home
       </BreadcrumbLink>
     </BreadcrumbItem>
     {
